<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">快销品销售平台</string>
    <string name="user_name">用户名</string>
    <string name="password">密&#160;&#160;&#160;&#160;&#160;码</string>
    <string name="save_password">记住密码</string>
    <string name="login">登录</string>
    <string name="back">返&#160;&#160;&#160;回</string>
    
    <!-- 标题 -->
    <string name="merchant_list_title">商户信息列表</string>
    <string name="product_list_title">产品信息列表</string>
    <string name="personal_info_title">个人信息</string>
    <string name="notice_list_title">公共信息列表</string>
    <string name="notice_info_title">公共信息内容</string>
    <string name="doings_list_title">活动列表</string>
    <string name="com_products_list_title">竞品信息列表</string>
    <string name="delivery_form_list_title">送货列表</string>
    <string name="add_order_title">添加订单</string>
    <string name="order_form_title">订单列表</string>
    <string name="add_doings_title">添加活动</string>
    
    <string name="logo">图标</string>
    <string name="xing">星</string>
    <string name="xiang">箱</string>
    <string name="users_visit">用户拜访</string>
    <string name="order_form">订货单</string>
    <string name="delivery_form">送货单</string>
    <string name="com_products">竞品信息</string>
    <string name="com_name">竞品名称：</string>
    <string name="null_string">点击添加</string>
    
    <!-- 目录名 -->
    <string name="dealer_contents">经销商</string>
    <string name="start_time_contents">开始时间</string>
    <string name="end_time_contents">结束时间</string>
    <string name="doings_content_contents">活动内容</string>
    <string name="product_name_contents">商品名称</string>
    <string name="price_contents">价格</string>
    <string name="count_contents">数量</string>
    <string name="delete_contents">删除</string>
    <string name="count_confirm_contents">数量确认</string>
    
    <string name="back_home">返回首页</string>
    <string name="merchant_info">商户信息</string>
    <string name="merchant_name">商户名称：</string>
    <string name="product_info">产品信息</string>
    <string name="announcement_info">公告信息</string>
    <string name="presonal_info">个人信息</string>
    <string name="welcome">欢迎</string>
    <string name="user_login">用户登录</string>
    <string name="photo">头像</string>
    <string name="name">姓名：</string>
    <string name="position">职位：</string>
    <string name="phonenum">手机号：</string>
    <string name="email">邮箱：</string>
    <string name="product_name">产品名称：</string>
    <string name="products_name">商品名称：</string>
    <string name="price">价格：</string>
    <string name="image">照片：</string>
    <string name="address">地址：</string>
    <string name="phone">电话：</string>
    <string name="fax">传真：</string>
    <string name="contact">联系人：</string>
    <string name="delivery_time">送货时间：</string>
    <string name="products_display">商品陈列：</string>
    <string name="note">订单</string>
    <string name="numbers">数量：</string>
    <string name="com_product_name">竞品名称：</string>
    <string name="doings_start_time">活动开始时间：</string>
    <string name="doings_end_time">活动结束时间：</string>
    <string name="doings_content">活动内容：</string>

    <!-- Button -->
    <string name="confirm_button">确&#160;&#160;&#160;认</string>
    <string name="products_diaplay_button">商品陈列</string>
    <string name="add_order_button">添加订单</string>
    <string name="com_doings_button">竞品活动</string>
    <string name="delete_item">&#160;&#160;X&#160;&#160;</string>
    <string name="add_button">添加</string>
    <string name="add_button_continue">继续添加</string>
    <string name="commit_button">提交</string>
    
    <!-- 提示语 -->
    <string name="login_emputy_input">请输入用户名或密码</string>
    <string name="login_failed">登陆失败</string>
    <string name="login_loading">正在登陆\.\.\.</string>
    <string name="data_loading">正在获取数据\.\.\.</string>
    <string name="data_commit">正在提交数据\.\.\.</string>
    <string name="data_emputy">填写信息不能为空</string>
    <string name="post_ok">提交成功</string>
    <string name="post_fialed">提交失败</string>
    <string name="add_ok">添加成功</string>
    <string name="add_select_time">点击修改时间</string>
    <string name="netsettitle">网络设置</string>
    <string name="netsetmessage">无法连接到网络，请检查网络设置。</string>
    <string name="cancel">取消</string>
    <string name="setting_conference_set">设置</string>
    
</resources>