<?xml version="1.0" encoding="utf-8"?>
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@android:id/tabhost"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
         >
       
        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
           />
         <TabWidget
            android:id="@android:id/tabs"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" 
            android:layout_alignParentBottom="true" 
            android:visibility="gone"
           />
         <FrameLayout 
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true" 
                >
          <RadioGroup 
              android:layout_width="fill_parent" 
              android:layout_height="wrap_content" 
              android:gravity="center_vertical" 
              android:layout_gravity="bottom" 
              android:orientation="horizontal" 
              android:id="@+id/mainRG"   
              android:background="@drawable/bg_login_welcome">
            <RadioButton android:id="@+id/radio_home" android:tag="radio_home_btn"    android:background="@drawable/check_bottombg_selector"  android:drawableTop="@drawable/check_home_selector"  android:layout_gravity="center"  style="@style/main_tab_bottom" android:text="@string/back_home"/>
            <RadioButton android:id="@+id/radio_merchant" android:tag="radio_merchant_btn"   android:background="@drawable/check_bottombg_selector"  android:drawableTop="@drawable/check_merchant_selector"  android:layout_gravity="center" style="@style/main_tab_bottom" android:text="@string/merchant_info"/>
            <RadioButton android:id="@+id/radio_product" android:tag="radio_product_btn"    android:background="@drawable/check_bottombg_selector" android:drawableTop="@drawable/check_product_selector"  android:layout_gravity="center" style="@style/main_tab_bottom" android:text="@string/product_info"/>
            <RadioButton android:id="@+id/radio_notice" android:tag="radio_notice_btn"    android:background="@drawable/check_bottombg_selector" android:drawableTop="@drawable/check_notice_selector"  android:layout_gravity="center" style="@style/main_tab_bottom" android:text="@string/announcement_info"/>
            <RadioButton android:id="@+id/radio_person" android:tag="radio_info_btn"    android:background="@drawable/check_bottombg_selector" android:drawableTop="@drawable/check_person_selector"  android:layout_gravity="center" style="@style/main_tab_bottom" android:text="@string/presonal_info"/>
            
        </RadioGroup>
        </FrameLayout>
    </RelativeLayout>
</TabHost>