<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EAEAEA"
    android:orientation="vertical"
    >
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:background="@drawable/bg_title"
        android:orientation="horizontal"
        android:id="@+id/navigate"
        >
        <TextView 
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:textSize="20sp"
			android:layout_gravity="center"
			android:paddingLeft="60dp"
			android:ellipsize="end"
			android:singleLine="true"
			android:id="@+id/vi_sahnghu_title_text"
            />
        <LinearLayout  
        	android:layout_width="fill_parent"  
        	android:layout_height="fill_parent" 
        	android:gravity="right" >  
           <ImageView
	        android:id="@+id/back"
	        android:layout_width="100dp"
	        android:layout_height="30dp"
	        android:layout_marginTop="15dp"
	        android:contentDescription="@string/back"
	        android:src="@drawable/back" />
         </LinearLayout> 
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" 
        android:background="@drawable/rect_gray"
        android:gravity="left"
        android:layout_margin="20dp"
        android:padding="20dp"
        android:layout_below="@+id/navigate"
        android:id="@+id/content"
        >

        <!-- 地址 -->
        <LinearLayout
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:orientation="horizontal"
        	>
            <TextView 
                android:layout_width="80dp"
	        	android:layout_height="wrap_content"
	        	android:text="@string/address"
	        	android:textColor="#000000"
                android:gravity="right"
                />
            <TextView 
                android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"
	        	android:text="丰庆公园对面"
	        	android:textColor="#000000"
                android:gravity="left"
                android:id="@+id/vi_shanghu_add_text"
                />            
        </LinearLayout>
        <!-- 电话 -->
        <LinearLayout
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:orientation="horizontal"
        	android:layout_marginTop="20dp"
        	>
            <TextView 
                android:layout_width="80dp"
	        	android:layout_height="wrap_content"
	        	android:text="@string/phone"
	        	android:textColor="#000000"
                android:gravity="right"
                />
            <TextView 
                android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"
	        	android:text="029-88888888"
	        	android:textColor="#000000"
                android:gravity="left"
                android:id="@+id/vi_shanghu_tel_text"
                />            
        </LinearLayout>
        
		<!-- 传真 -->
        <LinearLayout
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:orientation="horizontal"
        	android:layout_marginTop="20dp"
        	>
            <TextView 
                android:layout_width="80dp"
	        	android:layout_height="wrap_content"
	        	android:text="@string/fax"
	        	android:textColor="#000000"
                android:gravity="right"
                />
            <TextView 
                android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"
	        	android:text="029-88888888"
	        	android:textColor="#000000"
                android:gravity="left"
                android:id="@+id/vi_shanghu_fax_text"
                />            
        </LinearLayout>  
        
        <!-- 联系人 -->
        <LinearLayout
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:orientation="horizontal"
        	android:layout_marginTop="20dp"
        	>
            <TextView 
                android:layout_width="80dp"
	        	android:layout_height="wrap_content"
	        	android:text="@string/contact"
	        	android:textColor="#000000"
                android:gravity="right"
                />
            <TextView 
                android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"
	        	android:text="张三"
	        	android:textColor="#000000"
                android:gravity="left"
                android:id="@+id/vi_shanghu_contact_text"
                />            
        </LinearLayout>
        
        <!-- 手机 -->
        <LinearLayout
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:orientation="horizontal"
        	android:layout_marginTop="20dp"
        	>
            <TextView 
                android:layout_width="80dp"
	        	android:layout_height="wrap_content"
	        	android:text="@string/phonenum"
	        	android:textColor="#000000"
                android:gravity="right"
                />
            <TextView 
                android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"
	        	android:text="15353659649"
	        	android:textColor="#000000"
                android:gravity="left"
                android:id="@+id/vi_shanghu_m_photo_text"
                />            
        </LinearLayout>
        
        <!-- 商品陈列 -->
		<LinearLayout
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:orientation="horizontal"
        	android:layout_marginTop="20dp"
        	>
            <TextView 
                android:layout_width="80dp"
	        	android:layout_height="wrap_content"
	        	android:text="@string/products_display"
	        	android:textColor="#000000"
                android:gravity="right"
                android:layout_gravity="center"
                />
        	<ImageView
	        	android:layout_width="wrap_content"
	        	android:layout_height="wrap_content"
	        	android:contentDescription="@string/photo"
	        	android:layout_marginLeft="20dp"
	        	android:src="@drawable/mo1"
	        	android:gravity="center"
	        	android:id="@+id/products_image"
            	/>           
        </LinearLayout>      
    </LinearLayout>
    
    <!-- 操作按钮 -->
 	<LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:layout_marginLeft="20dp"
       android:layout_marginRight="20dp"
       android:gravity="center"
       android:orientation="horizontal"
       android:layout_below="@+id/content"
       >
	   <Button
           android:layout_width="90dp"
           android:layout_height="50dp"
           android:background="@drawable/rect_black"
           android:text="@string/products_diaplay_button"
           android:textColor="#FFFFFF"
           android:id="@+id/products_display_button"
           />
       <Button
           android:layout_width="90dp"
           android:layout_height="50dp"
           android:background="@drawable/rect_black"
           android:text="@string/add_order_button"
           android:textColor="#FFFFFF"
           android:id="@+id/add_order_button" />
       <Button
           android:layout_width="90dp"
           android:layout_height="50dp"
           android:background="@drawable/rect_black"
           android:text="@string/com_doings_button"
           android:textColor="#FFFFFF"
           android:id="@+id/add_doings_button" />
   </LinearLayout>
    
</RelativeLayout>