<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" 
    android:orientation="horizontal"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="10dp"
    android:stretchColumns="0,1,2,3"
    >
	<TableRow 
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
      <TextView
          android:id="@+id/item_name_order_form_name"
          android:layout_width="100dp"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:gravity="center"
          android:text="@string/dealer_contents"
          android:textColor="#000000"
          android:textSize="13sp"
          android:ellipsize="end"
          android:singleLine="true"
          android:paddingTop="5dp"
          android:paddingBottom="5dp" />

      <TextView
          android:id="@+id/item_name_order_form_price"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:gravity="center"
          android:layout_marginLeft="4dp"
          android:layout_marginRight="4dp"
          android:text="@string/start_time_contents"
          android:textColor="#000000"
          android:textSize="13sp"
          android:paddingTop="5dp"
          android:paddingBottom="5dp" />

      <TextView
          android:id="@+id/item_name_order_form_count"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:gravity="center"
          android:text="@string/end_time_contents"
          android:textColor="#000000"
          android:textSize="13sp"
          android:paddingTop="5dp"
          android:paddingBottom="5dp" />
      
      <TextView
          android:id="@+id/item_name_order_form_delete"
          android:layout_width="50dp"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:gravity="left"
          android:text="@string/delete_item"
          android:textColor="#FF0000"
          android:textSize="14sp"
          android:paddingTop="5dp"
          android:paddingBottom="5dp" />      

      </TableRow>
</TableLayout>