<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" 
    android:layout_marginLeft="10dp"
    android:layout_marginTop="10dp"
    android:stretchColumns="0,1,2,3"
    >
	<TableRow 
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
      <TextView
          android:id="@+id/item_name_doings_dealer"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:gravity="left"
          android:text="@string/dealer_contents"
          android:textColor="#000000"
          android:textSize="11sp"
          android:ellipsize="end"
          android:paddingTop="5dp"
          android:paddingBottom="5dp" />

      <TextView
          android:id="@+id/item_name_doings_start_time"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:layout_marginLeft="4dp"
          android:layout_marginRight="4dp"
          android:gravity="left"
          android:text="@string/start_time_contents"
          android:textColor="#000000"
          android:textSize="11sp"
          android:paddingTop="5dp"
          android:paddingBottom="5dp" />

      <TextView
          android:id="@+id/item_name_doings_end_time"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:layout_marginLeft="4dp"
          android:layout_marginRight="4dp"
          android:gravity="left"
          android:text="@string/end_time_contents"
          android:textColor="#000000"
          android:textSize="11sp"
          android:paddingTop="5dp"
          android:paddingBottom="5dp" />

      <TextView
          android:id="@+id/item_name_doings_content"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="left"
          android:gravity="center"
          android:text="@string/doings_content_contents"
          android:textColor="#000000"
          android:textSize="11sp"
          android:paddingTop="5dp"
          android:paddingBottom="5dp" />
     </TableRow>
</TableLayout>