<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EAEAEA"
    android:orientation="vertical"
    >
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" 
        android:background="@drawable/boxbj"
        >
    
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="380dp"
	        android:orientation="vertical" 
	        >
	
	        <ImageView 
	            android:layout_width="match_parent"
	        	android:layout_height="wrap_content"
	        	android:contentDescription="@string/logo"
	        	android:paddingTop="50dp"
	        	android:src="@drawable/logo"
	            />
	        
	        <LinearLayout
	            android:layout_width="match_parent"
	    		android:layout_height="match_parent"
	    		android:orientation="vertical"
	    		android:gravity="center_horizontal"
	    		>
	            <LinearLayout
	                android:layout_width="match_parent"
	    			android:layout_height="wrap_content"
	    			android:orientation="horizontal"
	    			android:gravity="center_horizontal"
	    			>
	    			<LinearLayout
	    				android:layout_width="wrap_content"
	    				android:layout_height="wrap_content"
	    				android:orientation="vertical"
	    				android:gravity="center" 
	    			    >
	    			    <ImageView
							android:id="@+id/users_visit"
							android:layout_width="wrap_content"
	        				android:layout_height="wrap_content"
	        				android:contentDescription="@string/xing"
	        				android:paddingTop="10dp"
	        				android:src="@drawable/xing"                     
	                    	android:layout_margin="10dp"
	                    	/>
	    			    <TextView 
							android:layout_width="wrap_content"
	        				android:layout_height="wrap_content"
	        				android:text="@string/users_visit"
	        				android:textColor="#000000"
	        				/>
	    			</LinearLayout>
	                
	 				<LinearLayout
	    				android:layout_width="wrap_content"
	    				android:layout_height="wrap_content"
	    				android:orientation="vertical"
	    				android:gravity="center" 
	    			    >
	    			    <ImageView
							android:id="@+id/order_form"
							android:layout_width="wrap_content"
	        				android:layout_height="wrap_content"
	        				android:contentDescription="@string/xing"
	        				android:paddingTop="10dp"
	        				android:src="@drawable/xing"                     
	                    	android:layout_margin="10dp"
	                    	/>
	    			    <TextView 
							android:layout_width="wrap_content"
	        				android:layout_height="wrap_content"
	        				android:text="@string/order_form"
	        				android:textColor="#000000"
	        				/>
	    			</LinearLayout>
	    			
	 				<LinearLayout
	    				android:layout_width="wrap_content"
	    				android:layout_height="wrap_content"
	    				android:orientation="vertical"
	    				android:gravity="center" 
	    			    >
	    			    <ImageView
							android:id="@+id/delivery_form"
							android:layout_width="wrap_content"
	        				android:layout_height="wrap_content"
	        				android:contentDescription="@string/xing"
	        				android:paddingTop="10dp"
	        				android:src="@drawable/xing"                     
	                    	android:layout_margin="10dp"
	                    	/>
	    			    <TextView 
							android:layout_width="wrap_content"
	        				android:layout_height="wrap_content"
	        				android:text="@string/delivery_form"
	        				android:textColor="#000000"
	        				/>
	    			</LinearLayout>
	    			
	 				<LinearLayout
	    				android:layout_width="wrap_content"
	    				android:layout_height="wrap_content"
	    				android:orientation="vertical"
	    				android:gravity="center" 
	    			    >
	    			    <ImageView
							android:id="@+id/com_products"
							android:layout_width="wrap_content"
	        				android:layout_height="wrap_content"
	        				android:contentDescription="@string/xing"
	        				android:paddingTop="10dp"
	        				android:src="@drawable/xing"                     
	                    	android:layout_margin="10dp"
	                    	/>
	    			    <TextView 
							android:layout_width="wrap_content"
	        				android:layout_height="wrap_content"
	        				android:text="@string/com_products"
	        				android:textColor="#000000"
	        				/>
	    			</LinearLayout>
	            </LinearLayout>
	            <LinearLayout 
	                android:layout_width="match_parent"
	    			android:layout_height="wrap_content"
	    			android:orientation="horizontal"
	                android:gravity="center_horizontal"
	                >
	                <LinearLayout
	    				android:layout_width="wrap_content"
	    				android:layout_height="wrap_content"
	    				android:orientation="vertical"
	    				android:gravity="center" 
	    			    >
	    			    <ImageView
	    			        android:id="@+id/merchant_info"
							android:layout_width="wrap_content"
	        				android:layout_height="wrap_content"
	        				android:contentDescription="@string/xing"
	        				android:paddingTop="10dp"
	        				android:src="@drawable/xing"                     
	                    	android:layout_margin="10dp"
	                    	/>
	    			    <TextView 
							android:layout_width="wrap_content"
	        				android:layout_height="wrap_content"
	        				android:text="@string/merchant_info"
	        				android:textColor="#000000"
	        				/>
	    			</LinearLayout>
	    			
	                <LinearLayout
	    				android:layout_width="wrap_content"
	    				android:layout_height="wrap_content"
	    				android:orientation="vertical"
	    				android:gravity="center" 
	    			    >
	    			    <ImageView
	    			        android:id="@+id/product_info"
							android:layout_width="wrap_content"
	        				android:layout_height="wrap_content"
	        				android:contentDescription="@string/xing"
	        				android:paddingTop="10dp"
	        				android:src="@drawable/xing"                     
	                    	android:layout_margin="10dp"
	                    	/>
	    			    <TextView 
							android:layout_width="wrap_content"
	        				android:layout_height="wrap_content"
	        				android:text="@string/product_info"
	        				android:textColor="#000000"
	        				/>
	    			</LinearLayout>
	    			
	                <LinearLayout
	    				android:layout_width="wrap_content"
	    				android:layout_height="wrap_content"
	    				android:orientation="vertical"
	    				android:gravity="center" 
	    			    >
	    			    <ImageView
							android:id="@+id/announcement_info"
							android:layout_width="wrap_content"
	        				android:layout_height="wrap_content"
	        				android:contentDescription="@string/xing"
	        				android:paddingTop="10dp"
	        				android:src="@drawable/xing"                     
	                    	android:layout_margin="10dp"
	                    	/>
	    			    <TextView 
							android:layout_width="wrap_content"
	        				android:layout_height="wrap_content"
	        				android:text="@string/announcement_info"
	        				android:textColor="#000000"
	        				/>
	    			</LinearLayout>
	    			
	                <LinearLayout
	    				android:layout_width="wrap_content"
	    				android:layout_height="wrap_content"
	    				android:orientation="vertical"
	    				android:gravity="center" 
	    			    >
	    			    <ImageView
	    			        android:id="@+id/personal_info"
							android:layout_width="wrap_content"
	        				android:layout_height="wrap_content"
	        				android:contentDescription="@string/xing"
	        				android:paddingTop="10dp"
	        				android:src="@drawable/xing"                     
	                    	android:layout_margin="10dp"
	                    	/>
	    			    <TextView 
							android:layout_width="wrap_content"
	        				android:layout_height="wrap_content"
	        				android:text="@string/presonal_info"
	        				android:textColor="#000000"
	        				/>
	    			</LinearLayout>
	            </LinearLayout>
	        </LinearLayout>
	        
	    </LinearLayout>
	    
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="50dp"
	        android:background="@drawable/bg_login_welcome"
	        android:orientation="horizontal" 
			android:gravity="center"
			android:layout_alignParentBottom="true"       
	        >
			<LinearLayout
	        	android:layout_width="match_parent"
	        	android:layout_height="50dp"
	        	android:orientation="horizontal" 		     
			    android:gravity="center" >
		        <TextView
					android:layout_width="wrap_content"
		        	android:layout_height="wrap_content"
		        	android:text="@string/welcome"
		        	android:textColor="#FFFFFF" 
		        	android:textSize="25sp"            
		            />
		        <TextView
					android:layout_width="wrap_content"
		        	android:layout_height="wrap_content"
		        	android:text="张伟"
		        	android:textColor="#FFFFFF" 
		        	android:textSize="25sp"
		        	android:id="@+id/wel_username" />
			    <TextView
					android:layout_width="wrap_content"
		        	android:layout_height="wrap_content"
		        	android:text="@string/user_login"
		        	android:textColor="#FFFFFF" 
		        	android:textSize="25sp"            
		            />
			     </LinearLayout>	        	        
		    </LinearLayout>
	</RelativeLayout>
</LinearLayout>